migrate mac project to JDK 21